traccia js e salvataggio dati utente

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <div>
                 <button type="button" id="generate">Genera</button>
-                <button type="button" id="generate">Annulla</button>
+                <button type="button" id="cancelled">Annulla</button>
             </div>
 
         </section>
