--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <div>
                 <label for="age">Fascia d'età</label>
                 <select name="age" id="age">
-                    <option value="min">Minorenne</option>
-                    <option value="maj">Maggiorenne</option>
+                    <option value="minor">Minorenne</option>
+                    <option value="adult">Maggiorenne</option>
                     <option value="over65">Over 65</option>
 
                 </select>
