--- a/index.html
+++ b/index.html
@@ -4,49 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/12bool.css">
     <link rel="stylesheet" href="css/style.css">
     <title>biglietto del treno</title>
 </head>
 <body>
-    <main>
+    <main class="container-fluid bg-red">
         <!-- SEZIONE DATI UTENTE -->
-        <section class="margin-2">
-            <h2>CALCOLA IL PREZZO DEL TUO BIGLIETTO</h2>
-            <div class="">
-                <label for="name">Nome e Cognome</label>
-                <input type="text" id="name">
+        <h2 class="padding-2 txt-center">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h2>
+        <section class="section-1 container bg-white txt-center">
+            <div class="row padding-2">
+                <div class="col-xs-12 col-md-4">
+                    <label for="name">Nome e Cognome</label>
+                    <div><input type="text" id="name"></div>
+                </div>
+            
+                <div class="col-xs-12 col-md-4">
+                    <label for="kms">Km da percorrere</label>
+                    <div><input type="number" id="kms" min="10" step="10" value="10"></div>
+                </div>
+                <div class="col-xs-12 col-md-4">
+                    <label for="age">Fascia d'età</label>
+                    <div>
+                        <select name="age" id="age">
+                            <option value="minor">Minorenne</option>
+                            <option value="adult">Maggiorenne</option>
+                            <option value="over65">Over 65</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="col-xs-12">
+                    <button type="button" id="generate" class="margin-2"><strong>Genera</strong></button>
+                    <button type="button" id="cancelled" class="margin-2"><strong>Annulla</strong></button>
+                </div>
             </div>
-            <div>
-                <label for="kms">Km da percorrere</label>
-                <input type="number" id="kms" min="10" step="10" value="10">
-            </div>
-            <div>
-                <label for="age">Fascia d'età</label>
-                <select name="age" id="age">
-                    <option value="minor">Minorenne</option>
-                    <option value="adult">Maggiorenne</option>
-                    <option value="over65">Over 65</option>
-
-                </select>
-            </div>
-            <div>
-                <button type="button" id="generate">Genera</button>
-                <button type="button" id="cancelled">Annulla</button>
-            </div>
-
         </section>
 
         <!-- SEZIONE BIGLIETTO -->
-        <section  class="margin-2">
-            <h2>IL TUO BIGLIETTO</h2>
-            <div class="">
+        <section  class="section-2 padding-2 ">
+            <h2 class="txt-center">IL TUO BIGLIETTO</h2>
+            <div class="bg-white padding-2">
                 <h3>DETTAGLI PASSEGGERO</h3>
+                <hr>
                 <p><strong>NOME PASSEGGERO</strong><span id="passenger-name"></span></p>
                 <p><strong>Offerta</strong><span id="promo"></span></p>
                 <p><strong>Carrozza</strong><span id="car"></span></p>
                 <p><strong>Codice CP</strong><span id="train-number"></span></p>
                 <p><strong>Costo biglietto</strong><span id="price"></span></p>
-
+                <hr>
             </div>
 
         </section>
