--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- SEZIONE DATI UTENTE -->
         <section class="section-1">
             <h2 class="py-2 txt-center">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h2>
-                <div class="container bg-white txt-center">
+                <div class="container bg-whites txt-center">
                     <div class="row ">
                         <div class="col-xs-12 col-md-4  py-1">
                             <label for="name">Nome e Cognome</label>
@@ -44,26 +44,26 @@
 
         <!-- SEZIONE BIGLIETTO -->
         <section  class="section-2">
-            <h2 class="txt-center py-2">IL TUO BIGLIETTO</h2>
-            <div class="container bg-white py-2">
-                <div class="row">
-                    <div class="col-xs-12">
+            <h2 class="txt-center py-1">IL TUO BIGLIETTO</h2>
+            <div class="container bg-whites py-2">
+                <div class="row cont-ticket px-3">
+                    <div class="col-xs-offset-1 col-xs-11">
                         <h3>DETTAGLI PASSEGGERO</h3>
                     </div>
-                    <div class="col-xs-12 col-md-3 py-1">
+                    <div class="col-md-offset-1 col-xs-12 col-md-2 py-1 border-x">
                         <h4>NOME PASSEGGERO</h4><span id="passenger-name"></span>
                     </div>
-                    <div class="col-xs-12 col-md-2 py-1">
-                        <h4>Offerta</h4><span id="promo"></span>
+                    <div class="col-xs-12 col-md-2 py-1 border-x">
+                        <h5>Offerta</h5><span id="promo"></span>
                     </div>
-                    <div class="col-xs-12 col-md-2 py-1">
-                        <h4>Carrozza</h4><span id="car"></span>
+                    <div class="col-xs-12 col-md-2 py-1 border-x">
+                        <h5>Carrozza</h5><span id="car"></span>
                     </div>
-                    <div class="col-xs-12 col-md-2 py-1">
-                        <h4>Codice Treno</h4><span id="train-number"></span>
+                    <div class="col-xs-12 col-md-2 py-1 border-x">
+                        <h5>Codice Treno</h5><span id="train-number"></span>
                     </div>
-                    <div class="col-xs-12 col-md-2 py-1">
-                        <h4>Costo biglietto</h4><span id="price"></span>
+                    <div class="col-xs-12 col-md-2 py-1 border-x">
+                        <h5>Costo biglietto</h5><span id="price"></span>
                     </div>
     
                 </div>
