aggiunta class display none

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </section>
 
         <!-- SEZIONE BIGLIETTO -->
-        <section  class="section-2">
+        <section id="section-ticket"  class="section-2 d-none">
             <h2 class="txt-center py-1">IL TUO BIGLIETTO</h2>
             <div class="container bg-whites py-2">
                 <div class="row cont-ticket px-3">
